feat: improve exception handling and add PDF date utilities (#37)
* feat: improve exception handling and add PDF date utilities

* fix: enable XML report generation in Gradle configuration

* refactor: update PDF handling and improve error management in document processing

* refactor: clean up PdfiumLibrary constructor and improve document count management

* refactor: clean up method signatures and improve error handling in PDF processing

* refactor: optimize method signatures and enhance error handling in PDF processing

* refactor: enhance checksum calculation and improve XMP metadata handling in PDF processing

* refactor: clean up formatting and improve readability in PDF processing classes

* refactor: add nullability annotations to improve code safety in PDF processing classes

* refactor: enhance null checks, improve memory segment handling, and ensure PDF date precision

* refactor: add ValueLayout import to enhance foreign memory handling in ViewBindings

* refactor: simplify Writer usage in XmpMetadataWriter for improved readability

* refactor: remove unused methods and improve memory management in PDF classes

* refactor: clean up code formatting and improve readability across multiple classes

* refactor: enhance thread safety and improve memory handling in PdfDocument and PdfSaver

* refactor: improve fallback scanning logic and enhance pattern usage in PdfDocument and PdfSaver

* refactor: enhance null checks and simplify bookmark handling in PDF classes